<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.ulisesbocchio</groupId>
    <artifactId>jasypt-spring-boot-samples-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.1-SNAPSHOT</version>
    <description>Jasypt Spring Boot Samples Parent</description>
    <name>Jasypt Spring Boot Samples Parent</name>
    <url>https://github.com/ulisesbocchio/jasypt-spring-boot-samples</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <spring.boot.version>3.5.0</spring.boot.version>
        <spring.cloud.version>2025.0.0</spring.cloud.version>
        <maven.compiler.version>3.13.0</maven.compiler.version>
        <start-class>Application</start-class>
        <jasypt.spring.boot.version>4.0.0-SNAPSHOT</jasypt.spring.boot.version>
        <system.rules.version>1.19.0</system.rules.version>
        <junit-pioneer.version>2.3.0</junit-pioneer.version>
    </properties>

    <modules>
        <module>jasypt-spring-boot-demo</module>
        <module>jasypt-spring-boot-demo-cloud-config</module>
        <module>jasypt-spring-boot-demo-cloud-config-embedded</module>
        <module>jasypt-spring-boot-demo-custom-detector</module>
        <module>jasypt-spring-boot-demo-custom-encryptor</module>
        <module>jasypt-spring-boot-demo-custom-encryptor-gcm</module>
        <module>jasypt-spring-boot-demo-custom-encryptor-no-starter</module>
        <module>jasypt-spring-boot-demo-custom-prefix-suffix</module>
        <module>jasypt-spring-boot-demo-custom-resolver</module>
        <module>jasypt-spring-boot-demo-custom-resolver-bean</module>
        <module>jasypt-spring-boot-demo-db-h2</module>
        <module>jasypt-spring-boot-demo-indirect-password</module>
        <module>jasypt-spring-boot-demo-ivgenerator</module>
        <module>jasypt-spring-boot-demo-no-password</module>
        <module>jasypt-spring-boot-demo-simple</module>
        <module>jasypt-spring-boot-demo-simple-asymmetric</module>
        <module>jasypt-spring-boot-demo-simple-asymmetric-der</module>
        <module>jasypt-spring-boot-demo-simple-ivgenerator</module>
        <module>jasypt-spring-boot-demo-simple-starter</module>
        <module>jasypt-spring-boot-demo-tomcat-ssl</module>
        <module>jasypt-spring-boot-demo-web</module>
        <module>jasypt-spring-boot-demo-web-secure</module>
        <module>jasypt-spring-boot-demo-web-secure-custom-resolver</module>
    </modules>

    <issueManagement>
        <url>https://github.com/ulisesbocchio/jasypt-spring-boot/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/ulisesbocchio/jasypt-spring-boot</url>
        <connection>scm:git:git://github.com/ulisesbocchio/jasypt-spring-boot.git</connection>
        <developerConnection>scm:git:git@github.com:ulisesbocchio/jasypt-spring-boot.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <developers>
        <developer>
            <name>Ulises Bocchio</name>
            <url>https://github.com/ulisesbocchio</url>
            <id>ulisesbocchio</id>
        </developer>
    </developers>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <mainClass>${start-class}</mainClass>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.github.ulisesbocchio</groupId>
                    <artifactId>jasypt-maven-plugin</artifactId>
                    <version>${jasypt.spring.boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-spring-boot</artifactId>
                <version>${jasypt.spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-spring-boot-starter</artifactId>
                <version>${jasypt.spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-maven-plugin</artifactId>
                <version>${jasypt.spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.stefanbirkner</groupId>
                <artifactId>system-rules</artifactId>
                <version>${system.rules.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit-pioneer</groupId>
                <artifactId>junit-pioneer</artifactId>
                <version>${junit-pioneer.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
</project>
